tests/NormalTests/paczka1/fuzzy1/68933080.err
Error in line 1: ZYGH S453 31,3
Error in line 12: ZYGH A592 12,3
Error in line 10: uAIvUvRbuk S453 35,7
Error in line 23: dgQIy00 S854 87,3
Error in line 17: uAIvUvRbuk A916 41,8
Error in line 24: dgQIy00 A916 39,0
Error in line 28: ZYGH S453 91,6
Error in line 26: dgQIy00 S854 68,4
Error in line 30: A592 A592 52,2
